--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>index page</title>
 </head>
 <body>
-<center>h1>listes des tasks</h1></center><
+<center><h1>Listes des taches</h1></center>
 <table class="table">
     <thead>
     <tr>
         <th scope="col">id</th>
-        <th scope="col">Tasks</th>
+        <th scope="col">Tache</th>
         <th scope="col">Description</th>
         <th scope="col">completed</th>
         <th scope="col">modifier/supp</th>
     </tr>
     </thead>
     <tbody class="table-group-divider">
-    <tr th:each="task : ${tasks}">
-        <th th:text="${task.id}" scope="row">1</th>
-        <td th:text="${task.title}"></td>
-        <td th:text="${task.description}" ></td>
-        <td th:text="${task.completed}" ></td>
+    <tr th:each="taske : ${todos}">
+        <th th:text="${taske.id}" scope="row">1</th>
+        <td th:text="${taske.task}"></td>
+        <td th:text="${taske.description}" ></td>
         <td>
-            <input type="checkbox" name="completed" th:checked="${task.completed}" disabled >
+            <input type="checkbox" name="completed" th:checked="${taske.completed}" disabled >
         </td>
         <td>
             <div class="d-inline-block">
-                <form th:action="@{/modi/{id}(id=${task.id})}" method="post">
-                    <input type="text" name="task" th:value="${task.title}" hidden/>
+                <form th:action="@{/modi/{id}(id=${taske.id})}" method="post">
+                    <input type="text" name="task" th:value="${taske.task}" hidden/>
                     <input type="checkbox" name="completed"  checked hidden>
-                    <input cols="30" rows="10" name="Description" th:value="${task.Description}" hidden />
-                    <button type="submit" ><i class="bi bi-check2-circle"></i></button>
+                    <input cols="30" rows="10" name="Description" th:value="${taske.Description}" hidden />
+                    <button type="submit" class="btn btn-success"><i class="bi bi-check2-circle"></i></button>
                 </form>
             </div>
             <div class="d-inline-block">
-                <form th:action="@{/supp/{id}(id=${task.id})}" method="post">
-                    <button type="submit"><i class="bi bi-trash"></i></button>
+                <form th:action="@{/supp/{id}(id=${taske.id})}" method="post">
+                    <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                 </form>
             </div>
         </td>
     </tr>
     </tbody>
 </table>
+<br>
+<center>
 <form action="/ajou"  method="post">
     <div class="container">
         tâche : <input type="text" name="task" placeholder="Nouvelle tâche" class="input-task" required>
         Description : <input cols="10" rows="20" name="Description"></input>
-        <button type="submit" class="btnadd">Ajouter</button>
+        <button type="submit" class="btn btn-success">Ajouter</button>
     </div>
 
-</form>
+</form></center>
 </body>
 </html>
